--- a/templates/up_next_and_later.webvfx.html
+++ b/templates/up_next_and_later.webvfx.html
@@ -4,7 +4,7 @@
 			body {
 				margin: 0;
 				padding: 0;
-				background-color: #0b3865;
+				background-color: #360c4e;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
 			 }
@@ -32,7 +32,7 @@
 			}
 
 			.logo {
-				width: 250px;
+				width: 400px;
 				display: block;
 				position: absolute;
 				top: 100px;
@@ -40,7 +40,7 @@
 			}		
 
 			.day {
-				color: #3dbb95;
+				color: #ff57c0;
 				text-transform: uppercase;
 				margin: 0;
 				padding: 0;
@@ -62,7 +62,7 @@
 
 			.sessionTime {
 				font-size: 2rem;
-				color: #3dbb95;
+				color: #ff57c0;
 			}
 
 			.sessionName {
@@ -87,7 +87,7 @@
 			}
 			
 			.links .hashtag {
-				color: #3dbb95;
+				color: #ff57c0;
 				text-transform: uppercase;
 				font-family: "NB Grotesk";
 				font-size: 3.5rem;
@@ -156,7 +156,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/egx-logo-white.png" />
+			<img class="logo" src="../images/rezzed-2015-white.png" />
 			<div id="slate">
 				<p class="day next">Next:</p>
 				
