--- a/templates/full_schedule.webvfx.html
+++ b/templates/full_schedule.webvfx.html
@@ -4,7 +4,7 @@
 			body {
 				margin: 0;
 				padding: 0;
-				background-color: #0b3865;
+				background-color: #360c4e;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
 			 }
@@ -32,7 +32,7 @@
 			}
 
 			.logo {
-				width: 250px;
+				width: 400px;
 				display: block;
 				position: absolute;
 				top: 100px;
@@ -40,7 +40,7 @@
 			}		
 
 			.day {
-				color: #3dbb95;
+				color: #ff57c0;
 				text-transform: uppercase;
 				margin: 0;
 				padding: 0;
@@ -50,25 +50,27 @@
 			
 			.session  {
 				color: white;
-				margin-top: 75px;
-				padding-left: 50px;
-				border-left: 1px solid white;
+				margin-top: 50px;
+				padding-left: 150px;
 			}
 
 			.sessionTime {
+				position: absolute;
+				left: 0px;
 				font-size: 2rem;
-				color: #3dbb95;
+				font-weight: normal;
+				color: #ff57c0;
 			}
 
 			.sessionName {
 				font-family: "NB Grotesk";
 				text-transform: uppercase;
-				font-size: 3rem;
+				font-size: 2.5rem;
 				font-weight: bold;
 			}
 			
 			.sessionInfo {
-				font-size: 2.25rem;
+				font-size: 2.0rem;
 				font-weight: normal;
 			}
 			
@@ -82,7 +84,7 @@
 			}
 			
 			.links .hashtag {
-				color: #3dbb95;
+				color: #ff57c0;
 				text-transform: uppercase;
 				font-family: "NB Grotesk";
 				font-size: 3.5rem;
@@ -155,36 +157,36 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/egx-logo-white.png" />
+			<img class="logo" src="../images/rezzed-2015-white.png" />
 			<div id="slate">
 				<p class="day">FRIDAY:</p>
 				
 				<div class="session one">
-					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+					<h1 class="sessionTime" id="t1"> 00:00 </h1>
 					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
 					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
 				</div>
 				
 				<div class="session two">
-					<h1 class="sessionTime" id="t2"> 00:00 - 00:00 </h1>
+					<h1 class="sessionTime" id="t2"> 00:00 </h1>
 					<h1 class="sessionName" id="s2"> Total War </h1>
 					<h2 class="sessionInfo" id="d2"> 15 years of battle animation in Total War with Developers from Creative Assembly </h2> 
 				</div>
 				
 				<div class="session three">
-					<h1 class="sessionTime" id="t3"> 00:00 - 00:00 </h1>
+					<h1 class="sessionTime" id="t3"> 00:00 </h1>
 					<h1 class="sessionName" id="s3"> The Swindle  </h1>
 					<h2 class="sessionInfo" id="d3"> Dan Marshall talks stealth game design decisions </h2>  	
 				</div>
 				
 				<div class="session four">
-					<h1 class="sessionTime" id="t4"> 00:00 - 00:00 </h1>
+					<h1 class="sessionTime" id="t4"> 00:00 </h1>
 					<h1 class="sessionName" id="s4"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
 					<h2 class="sessionInfo" id="d4"> Mark Foster and David Fenn from Devolver Digital  </h2>  	
 				</div>
 				
 				<div class="session five">
-					<h1 class="sessionTime" id="t5"> 00:00 - 00:00 </h1>
+					<h1 class="sessionTime" id="t5"> 00:00 </h1>
 					<h1 class="sessionName" id="s5"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
 					<h2 class="sessionInfo" id="d5"> Mark Foster and David Fenn from Devolver Digital  </h2>  	
 				</div>
