--- a/templates/join_us_for_egx.webvfx.html
+++ b/templates/join_us_for_egx.webvfx.html
@@ -4,7 +4,7 @@
 			body {
 				margin: 0;
 				padding: 0;
-				background-color: #0b3865;
+				background-color: #360c4e;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
 			 }
@@ -32,7 +32,7 @@
 			}
 
 			.logo {
-				width: 250px;
+				width: 800px;
 				display: block;
 				position: absolute;
 				top: 100px;
@@ -40,38 +40,28 @@
 			}		
 
 			.day {
-				color: #3dbb95;
+				position: absolute;
+				top: 400px;
+				left: 100px;
+				color: #ff57c0;
 				text-transform: uppercase;
 				margin: 0;
 				padding: 0;
 				font-size: 3rem;
 				font-family: "NB Grotesk";
 			}
-			
-			.session  {
-				color: white;
-				margin-top: 75px;
-				padding-left: 50px;
-				border-left: 1px solid white;
-			}
-
-			.sessionTime {
-				font-size: 2rem;
-				color: #3dbb95;
-			}
-
-			.sessionName {
-				font-family: "NB Grotesk";
+			.fb {
+				position: absolute;
+				top: 500px;
+				left: 100px;
+				color: #ff57c0;
 				text-transform: uppercase;
+				margin: 0;
+				padding: 0;
 				font-size: 3rem;
-				font-weight: bold;
+				font-family: "NB Grotesk";
 			}
-			
-			.sessionInfo {
-				font-size: 2.25rem;
-				font-weight: normal;
-			}
-			
+
 			.links  {
 				display: block;
 				color: white;
@@ -82,7 +72,7 @@
 			}
 			
 			.links .hashtag {
-				color: #3dbb95;
+				color: #ff57c0;
 				text-transform: uppercase;
 				font-family: "NB Grotesk";
 				font-size: 3.5rem;
@@ -126,15 +116,10 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/egx-logo-white.png" />
-			<div id="slate">
-				<p class="day">That's all for this year!</p>
+			<img class="logo" src="../images/rezzed-2015-white.png" />
+			<p class="day">And that's a wrap :'(</p>
+			<p class="fb">See what you missed facebook.com/egx</p>
 				
-				<div class="session">
-					<h1 class="sessionName" id="s1">Join us for EGX 2016.</h1>
-					<h2 class="sessionInfo" id="d1">Thanks for watching!</h2>  	
-				</div>
-			</div>
 			<div class="links">
 				<p class="hashtag">#EGX</p>
 				<p>www.youtube.com/egx</p>
