--- a/templates/technical_difficulties.webvfx.html
+++ b/templates/technical_difficulties.webvfx.html
@@ -4,95 +4,35 @@
 			body {
 				margin: 0;
 				padding: 0;
-				background-color: #0b3865;
+				background-color: #360c4e;
+				background-image: url('../images/colussus.jpg');
+				background-size: cover;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
+				width: 1920px;
+				height: 1080px;
 			 }
 
 			.wrapper {
 				position: relative;
-				width: 1920px;
-				height: 1080px;
-			}
-
-			#slate {
-				position: absolute;
-				left: 620px;
-				right: 50px;
-				top: 100px;	 
-			}
-
-			h1, h2 {
+				top: 240px;
+				width: 1000px;
+				height: 600px;
+				text-align: center;
+				margin-left: auto;
+				margin-right: auto;
 				color: white;
-				width: 1050px;
-				line-height: 1.1;
-				margin-top: .2rem;
-				margin-bottom: 0px;
-				font-size: 1.3rem;
+				text-transform: uppercase;
+				font-size: 2rem;
+				font-family: "NB Grotesk";
+				-webkit-filter: drop-shadow(2px 2px 15px rgba(0,0,0,0.9));
 			}
 
 			.logo {
-				width: 250px;
-				display: block;
-				position: absolute;
-				top: 100px;
-				left: 100px;
+				width: 800px;
+				display: inline-block;
 			}		
 
-			.day {
-				color: #3dbb95;
-				text-transform: uppercase;
-				margin: 0;
-				padding: 0;
-				font-size: 3rem;
-				font-family: "NB Grotesk";
-			}
-			
-			.session  {
-				color: white;
-				margin-top: 75px;
-				padding-left: 50px;
-				border-left: 1px solid white;
-			}
-
-			.sessionTime {
-				font-size: 2rem;
-				color: #3dbb95;
-			}
-
-			.sessionName {
-				font-family: "NB Grotesk";
-				text-transform: uppercase;
-				font-size: 3rem;
-				font-weight: bold;
-			}
-			
-			.sessionInfo {
-				font-size: 2.25rem;
-				font-weight: normal;
-			}
-			
-			.links  {
-				display: block;
-				color: white;
-				font-size: 2.5rem;
-				position: absolute;
-				left: 100px;
-				bottom: 100px;
-			}
-			
-			.links .hashtag {
-				color: #3dbb95;
-				text-transform: uppercase;
-				font-family: "NB Grotesk";
-				font-size: 3.5rem;
-			}
-			
-			.links p {
-				line-height: 1;
-				margin: 0;
-				padding: 10px 0 0;
-			}
 		</style>
 		<script src="../lib/jquery-2.1.3.min.js"></script>
 		<script src="../lib/TweenMax.min.js"></script>
@@ -126,17 +66,11 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/egx-logo-white.png" />
-			<div id="slate">
-				<div class="session">
-					<h1 class="sessionName">We're experiencing technical difficulties.</h1>
-					<h2 class="sessionInfo">Sorry, we'll be back soon!</h2>
-				</div>
-			</div>
-			<div class="links">
-				<p class="hashtag">#EGX</p>
-				<p>www.youtube.com/egx</p>
-			</div>
+			<img class="logo" src="../images/rezzed-2015-white.png" />
+			<h1 class="sessionName">We're experiencing technical difficulties.</h1>
+			<h2 class="sessionInfo">Sorry, we'll be back soon!</h2>
+			<p class="hashtag">#EGX</p>
+			<p>www.youtube.com/egx</p>
 		</div>
 	</body>
 </html>
