fixes and fxoes

--- a/templates/up_next_and_later.webvfx.html
+++ b/templates/up_next_and_later.webvfx.html
@@ -4,7 +4,8 @@
 			body {
 				margin: 0;
 				padding: 0;
-				background-color: #360c4e;
+				/*background-color: #360c4e;*/
+				background-color: rgba(54,12,78,0.7);
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
 			 }
