--- a/templates/now.webvfx.html
+++ b/templates/now.webvfx.html
@@ -4,7 +4,7 @@
 			body {
 				margin: 0;
 				padding: 0;
-				background-color: #360c4e;
+				background-color: rgba(54,12,78,0.7);
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
 				line-height: 1.1;
