--- a/templates/lower-left-thirds.webvfx.html
+++ b/templates/lower-left-thirds.webvfx.html
@@ -11,6 +11,7 @@
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				line-height: 1.1;
 				-webkit-font-smoothing: antialiased;
+				color:white;
 			}
 		
 			.wrapper {
@@ -44,10 +45,15 @@
 				left: 0;
 				background-color: #360c4e;
 				padding: 1.5rem 2rem 0;
-				font-size: 2.75rem;
+				/*font-size: 2.75rem;*/
 				color: #ff57c0;
 				line-height: 1;
 				text-transform: uppercase;
+			}
+			
+			#now > h1 {
+    			margin: 0;
+                font-weight:normal;
 			}
 
 			#sessionName {
@@ -121,9 +127,13 @@
 <body>
 	<div class="wrapper">		
 		<div id="slate">
-			<span id="now">Now:</span>
-			<h1 id="sessionName">Name of Session of Session</h1>
-			<h2 id="sessionInfo">Information about the session information about the session information about the session information about the session information about the session information about the session.</h2>
+			<div id="now">
+    			<h1>Now:</h1>
+			</div>
+			<div class"info">
+    			<h1 id="sessionName">Name of Session of Session</h1>
+    			<h2 id="sessionInfo">Information about the session information about the session information about the session information about the session information about the session information about the session.</h2>
+			</div>
 		</div>  
 	</div>
 </body>
