--- a/templates/next.webvfx.html
+++ b/templates/next.webvfx.html
@@ -5,9 +5,10 @@
 				margin: 0;
 				padding: 0;
 				background-color: rgba(54,12,78,0.7);
-				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				font-family: "NB Grotesk", "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
 				line-height: 1.1;
+				color:white;
 			 }
 
 			.wrapper {
@@ -17,32 +18,58 @@
 			}
 
 			#slate {
-				position: absolute;
+				/*position: absolute;
 				left: 620px;
 				right: 100px;
-				top: 100px;	 
+				top: 100px;	 */
+				margin-top:100px;
+				margin-left:100px;
+			}
+
+			.about {
+    			float:left;
 			}
 
 			.logo {
 				width: 400px;
 				display: block;
-				position: absolute;
-				top: 100px;
-				left: 100px;
+			}	
+
+			.links  {
+				display: block;
+				font-size: 2rem;
+				padding-top:75px;
+				font-family: Helvetica;
+			}
+			
+			.links .hashtag {
+				color: #ff57c0;
+				text-transform: uppercase;
+				font-size: 3rem;
+			}
+			
+			.links p {
+				line-height: 1.2;
+				margin: 0;
 			}		
+			
+			.timetable {
+    			float:left;
+    			width:1320px;
+    			margin-left:50px;
+    			margin-top:30px;    			
+			}
 
 			.day {
 				color: #ff57c0;
 				text-transform: uppercase;
 				margin: 0;
 				padding: 0;
-				font-size: 3.5rem;
-				font-family: "NB Grotesk";
-				font-weight: bold;
+				font-size: 3rem;
+				font-weight: normal;
 			}
 			
 			.session  {
-				color: white;
 				margin-top: 75px;
 				padding-left: 50px;
 				border-left: 1px solid white;
@@ -64,7 +91,6 @@
 			}
 
 			.sessionName {
-				font-family: "NB Grotesk";
 				text-transform: uppercase;
 				font-size: 3.75rem;
 				font-weight: bold;
@@ -78,28 +104,6 @@
 				line-height: 1.2;
 			}
 			
-			.links  {
-				display: block;
-				color: white;
-				font-size: 2.5rem;
-				position: absolute;
-				left: 100px;
-				bottom: 100px;
-			}
-			
-			.links .hashtag {
-				color: #ff57c0;
-				text-transform: uppercase;
-				font-family: "NB Grotesk";
-				font-size: 3.5rem;
-				font-weight: bold;
-			}
-			
-			.links p {
-				line-height: 1;
-				margin: 0;
-				padding: 10px 0 0;
-			}
 		</style>
 		<script src="../lib/jquery-2.1.3.min.js"></script>
 		<script src="../lib/TweenMax.min.js"></script>
@@ -151,19 +155,25 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/rezzed-2015-white.png" />
 			<div id="slate">
-				<p class="day">Next:</p>
-				
-				<div class="session">
-					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
-					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
-				</div>
-			</div>
-			<div class="links">
-				<p class="hashtag">#EGX</p>
-				<p>www.youtube.com/egx</p>
+    			<div class="about">
+        			<img class="logo" src="../images/rezzed-2015-white.png" />
+        			<div class="links">
+        				<p class="hashtag">#EGX <span style="color:white;">@EGX</span></p>
+        				<p>egx.net/rezzed</p>
+        				<p>youtube.com/egx</p>
+        				<p>facebook.com/egx</p>
+        			</div>    	
+			    </div>	
+    			<div class="timetable">
+    				<h1 class="day">Next:</h1>
+    				
+    				<div class="session">
+    					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+    					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+    					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+    				</div>
+    			</div>  			
 			</div>
 		</div>
 	</body>
