--- a/templates/tomorrow.webvfx.html
+++ b/templates/tomorrow.webvfx.html
@@ -5,8 +5,9 @@
 				margin: 0;
 				padding: 0;
 				background-color: rgba(54,12,78,0.7);
-				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				font-family: "NB Grotesk", "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
+				color: white;
 			 }
 
 			.wrapper {
@@ -16,83 +17,92 @@
 			}
 
 			#slate {
-				position: absolute;
-				left: 620px;
-				right: 50px;
-				top: 100px;	 
+    			margin-top:100px;
+    			margin-left:100px;
 			}
 
 			h1, h2 {
-				color: white;
-				width: 1050px;
 				line-height: 1.1;
 				margin-top: .2rem;
 				margin-bottom: 0px;
 				font-size: 1.3rem;
 			}
+			
+			.about {
+    			float:left;
+			}
 
 			.logo {
 				width: 400px;
 				display: block;
-				position: absolute;
-				top: 100px;
-				left: 100px;
-			}		
+			}	
+
+			.links  {
+				display: block;
+				font-size: 2rem;
+				padding-top:30px;
+				font-family: Helvetica;
+			}
+			
+			.links .hashtag {
+				color: #ff57c0;
+				text-transform: uppercase;
+				font-size: 3rem;
+			}
+			
+			.links p {
+				line-height: 1.2;
+				margin: 0;
+			}
+			
+			.timetable {
+    			float:left;
+    			width:1320px;
+    			margin-left:50px;
+    			margin-top:30px;
+			}	
 
 			.day {
 				color: #ff57c0;
 				text-transform: uppercase;
 				margin: 0;
 				padding: 0;
+
+				font-weight: normal;
 				font-size: 3rem;
-				font-family: "NB Grotesk";
+				
 			}
 			
 			.session  {
-				color: white;
-				margin-top: 75px;
-				padding-left: 50px;
-				border-left: 1px solid white;
+                padding-top: 25px;
+
+				clear:both;
 			}
 
 			.sessionTime {
+
 				font-size: 2rem;
+				font-weight: normal;
 				color: #ff57c0;
+				width:100px;
+				float:left;
+			}
+			
+			.info {
+    			float:left;
+    			max-width: 80%;
 			}
 
 			.sessionName {
-				font-family: "NB Grotesk";
 				text-transform: uppercase;
-				font-size: 3rem;
+				font-size: 2.5rem;
 				font-weight: bold;
 			}
 			
 			.sessionInfo {
-				font-size: 2.25rem;
+				font-size: 2.0rem;
 				font-weight: normal;
-			}
-			
-			.links  {
-				display: block;
-				color: white;
-				font-size: 2.5rem;
-				position: absolute;
-				left: 100px;
-				bottom: 100px;
-			}
-			
-			.links .hashtag {
-				color: #ff57c0;
-				text-transform: uppercase;
-				font-family: "NB Grotesk";
-				font-size: 3.5rem;
-			}
-			
-			.links p {
-				line-height: 1;
-				margin: 0;
-				padding: 10px 0 0;
-			}
+			}			
 		</style>
 		<script src="../lib/jquery-2.1.3.min.js"></script>
 		<script src="../lib/TweenMax.min.js"></script>
@@ -125,17 +135,17 @@
 					.from( ".one", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "one" )
 					.from( ".two", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "one -=0.5","two" )
 					.from( ".three", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "two -=0.5","three"	)
-					.from( ".four", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "three -=0.5"	)
-					.from( ".five", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "four -=0.5"	)
+					.from( ".four", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "three -=0.5", "four"	)
+					.from( ".five", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "four -=0.5", "five"	)
 					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "five -=0.5",  "end")
 			
 					//reverse
-					.to( ".day", 0.3, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut }, "end+=6" )
+                    .to( ".day", 0.3, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut }, "end+=6" )
 					.to( ".one", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6")
 					.to( ".two", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6")
 					.to( ".three", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  },  "end+=6" )
-					.to( ".four", 0.3, { css: { autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6"  )
-					.to( ".five", 0.3, { css: { autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6"  )
+					.to( ".four", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6"  )
+					.to( ".five", 0.3, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "end+=6"  )
 					.to( ".links", 0.3, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "end+=6");
 				
 				if( typeof webvfx !== "undefined" ) {
@@ -155,43 +165,60 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/rezzed-2015-white.png" />
 			<div id="slate">
-				<p class="day">Come back tomorrow for:</p>
-				
-				<div class="session one">
-					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
-					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
-				</div>
-				
-				<div class="session two">
-					<h1 class="sessionTime" id="t2"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s2"> Total War </h1>
-					<h2 class="sessionInfo" id="d2"> 15 years of battle animation in Total War with Developers from Creative Assembly </h2> 
-				</div>
-				
-				<div class="session three">
-					<h1 class="sessionTime" id="t3"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s3"> The Swindle  </h1>
-					<h2 class="sessionInfo" id="d3"> Dan Marshall talks stealth game design decisions </h2>  	
-				</div>
-				
-				<div class="session four">
-					<h1 class="sessionTime" id="t4"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s4"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
-					<h2 class="sessionInfo" id="d4"> Mark Foster and David Fenn from Devolver Digital  </h2>  	
-				</div>
-				
-				<div class="session five">
-					<h1 class="sessionTime" id="t5"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s5"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
-					<h2 class="sessionInfo" id="d5"> Mark Foster and David Fenn from Devolver Digital  </h2>  	
-				</div>
-			</div>
-			<div class="links">
-				<p class="hashtag">#EGX</p>
-				<p>www.youtube.com/egx</p>
+    			<div class="about">
+        			<img class="logo" src="../images/rezzed-2015-white.png" />
+        			<div class="links">
+        				<p class="hashtag">#EGX <span style="color:white;">@EGX</span></p>
+        				<p>egx.net/rezzed</p>
+        				<p>youtube.com/egx</p>
+        				<p>facebook.com/egx</p>
+        			</div>    	
+			    </div>		
+    			
+    			<div class="timetable">
+    				<h1 class="day">Tomorrow:</h1>
+    				
+    				<div class="session one">
+    					<h1 class="sessionTime" id="t1"> 00:00 </h1>
+    					<div class="info">
+        					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+        					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+    					</div>
+    				</div>
+    				
+    				<div class="session two">
+    					<h1 class="sessionTime" id="t2"> 00:00 </h1>
+    					<div class="info">
+        					<h1 class="sessionName" id="s2"> Total War </h1>
+        					<h2 class="sessionInfo" id="d2"> 15 years of battle animation in Total War with Developers from Creative Assembly </h2> 
+    					</div>
+    				</div>
+    				
+    				<div class="session three">
+    					<h1 class="sessionTime" id="t3"> 00:00 </h1>
+    					<div class="info">
+        					<h1 class="sessionName" id="s3"> The Swindle  </h1>
+        					<h2 class="sessionInfo" id="d3"> Dan Marshall talks stealth game design decisions </h2>  
+    					</div>	
+    				</div>
+    				
+    				<div class="session four">
+    					<h1 class="sessionTime" id="t4"> 00:00 </h1>
+    					<div class="info">
+        					<h1 class="sessionName" id="s4"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+        					<h2 class="sessionInfo" id="d4"> Mark Foster and David Fenn from Devolver Digital  </h2>  
+    					</div>	
+    				</div>
+    				
+    				<div class="session five">
+    					<h1 class="sessionTime" id="t5"> 00:00 </h1>
+    					<div class="info">
+        					<h1 class="sessionName" id="s5"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+        					<h2 class="sessionInfo" id="d5"> Mark Foster and David Fenn from Devolver Digital  </h2> 
+    					</div> 	
+    				</div>
+    			</div>
 			</div>
 		</div>
 	</body>
