--- a/templates/up_next_and_later.webvfx.html
+++ b/templates/up_next_and_later.webvfx.html
@@ -6,8 +6,9 @@
 				padding: 0;
 				/*background-color: #360c4e;*/
 				background-color: rgba(54,12,78,0.7);
-				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				font-family: "NB Grotesk", "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
+				color:white;
 			 }
 
 			.wrapper {
@@ -17,28 +18,51 @@
 			}
 
 			#slate {
-				position: absolute;
-				left: 620px;
-				right: 50px;
-				top: 100px;	 
+				margin-top:100px;
+				margin-left:100px;
 			}
 
 			h1, h2 {
-				color: white;
-				width: 1050px;
 				line-height: 1.1;
 				margin-top: .2rem;
 				margin-bottom: 0px;
 				font-size: 1.3rem;
 			}
 
+			.about {
+    			float:left;
+			}
+
 			.logo {
 				width: 400px;
 				display: block;
-				position: absolute;
-				top: 100px;
-				left: 100px;
-			}		
+			}	
+
+			.links  {
+				display: block;
+				font-size: 2rem;
+				padding-top:30px;
+				font-family: Helvetica;
+			}
+			
+			.links .hashtag {
+				color: #ff57c0;
+				text-transform: uppercase;
+				font-size: 3rem;
+			}
+			
+			.links p {
+				line-height: 1.2;
+				margin: 0;
+			}	
+			
+			.timetable {
+    			float:left;
+    			width:1320px;
+    			margin-left:50px;
+    			margin-top:30px;
+    			
+			}
 
 			.day {
 				color: #ff57c0;
@@ -46,7 +70,7 @@
 				margin: 0;
 				padding: 0;
 				font-size: 3rem;
-				font-family: "NB Grotesk";
+				font-weight:normal;
 			}
 			
 			.day.later
@@ -55,7 +79,6 @@
 			}
 			
 			.session  {
-				color: white;
 				margin-top: 25px;
 				padding-left: 50px;
 				border-left: 1px solid white;
@@ -67,7 +90,6 @@
 			}
 
 			.sessionName {
-				font-family: "NB Grotesk";
 				text-transform: uppercase;
 				font-size: 3rem;
 				font-weight: bold;
@@ -78,27 +100,6 @@
 				font-weight: normal;
 			}
 			
-			.links  {
-				display: block;
-				color: white;
-				font-size: 2.5rem;
-				position: absolute;
-				left: 100px;
-				bottom: 100px;
-			}
-			
-			.links .hashtag {
-				color: #ff57c0;
-				text-transform: uppercase;
-				font-family: "NB Grotesk";
-				font-size: 3.5rem;
-			}
-			
-			.links p {
-				line-height: 1;
-				margin: 0;
-				padding: 10px 0 0;
-			}
 		</style>
 		<script src="../lib/jquery-2.1.3.min.js"></script>
 		<script src="../lib/TweenMax.min.js"></script>
@@ -128,10 +129,10 @@
 				var tl=new TimelineLite();
 				tl
 					.from( ".day.next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut })
-					.from( ".session.next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.25")
-					.from( ".day.later", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.25")
-					.from( ".session.later", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.25")
-					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "+=0.25")
+					.from( ".session.next", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.2")
+					.from( ".day.later", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.2")
+					.from( ".session.later", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: Power4. easeInOut  }, "+=0.2")
+					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "+=0.2")
 			
 					//reverse
 					.to( ".day.next", 0.3, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut }, "end+=6" )
@@ -157,28 +158,33 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/rezzed-2015-white.png" />
 			<div id="slate">
-				<p class="day next">Next:</p>
-				
-				<div class="session next">
-					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
-					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
-				</div>
-
-				<p class="day later">Later:</p>
-				
-				<div class="session later">
-					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
-					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
-					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
-				</div>
-			</div>
-			
-			<div class="links">
-				<p class="hashtag">#EGX</p>
-				<p>www.youtube.com/egx</p>
+    			<div class="about">
+        			<img class="logo" src="../images/rezzed-2015-white.png" />
+        			<div class="links">
+        				<p class="hashtag">#EGX <span style="color:white;">@EGX</span></p>
+        				<p>egx.net/rezzed</p>
+        				<p>youtube.com/egx</p>
+        				<p>facebook.com/egx</p>
+        			</div>    	
+			    </div>	
+    			<div class="timetable">
+    				<h1 class="day next">Next:</h1>
+    				
+    				<div class="session next">
+    					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+    					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+    					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+    				</div>
+    
+    				<h1 class="day later">Later:</h1>
+    				
+    				<div class="session later">
+    					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
+    					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
+    					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
+    				</div>
+    			</div>
 			</div>
 		</div>
 	</body>
