--- a/templates/join_us_for_egx.webvfx.html
+++ b/templates/join_us_for_egx.webvfx.html
@@ -31,6 +31,7 @@
     			padding-left:50px;
     			width:40%;
     			border-left:1px solid white;
+    			margin-top:185px;
 			}
 			
 			.logo#egx {
@@ -95,11 +96,11 @@
 			function onLoad() {
 				handleFontSize();
 				var tl=new TimelineLite();
-				tl .from( ".end-text", 1, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
-				    .from( ".links", 1, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
-				    .from(".hello", 0.5, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
-				    .from(".egx > p:first-child", 0.5, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
-				    .from(".egx > p:last-child", 0.5, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
+				tl .from( ".end-text", 0.7, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
+				    .from( ".links", 0.7, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
+				    .from(".hello", 0.7, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
+				    //.from(".egx > p:first-child", 0.5, { css: { autoAlpha:0  },ease: Power4. easeInOut })
+				    //.from(".egx > p:last-child", 0.5, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut })
 				
 				
 				if( typeof webvfx !== "undefined" ) {
@@ -139,7 +140,7 @@
     			    <img class="logo" id="egx" src="../images/egx-logo-white.png" />
         			<div class="egx">
             			<p>Join us in September for EGX at the NEC in Birmingham!</p> 	
-            			<p>Get your tickets now!</p> 		
+            			<p style="color: #ff57c0;">Get your tickets now!</p> 	
         			</div>
         		</div>
     		</div>
