--- a/templates/now.webvfx.html
+++ b/templates/now.webvfx.html
@@ -13,8 +13,8 @@
 
 			.wrapper {
 				position: relative;
-				width: 1920px;
-				height: 1080px;
+				width: 1820px;
+				height: 950px;
 			}
 
 			#slate {
@@ -39,7 +39,6 @@
 				display: block;
 				font-size: 2rem;
 				padding-top:75px;
-				font-family: Helvetica;
 			}
 			
 			.links .hashtag {
@@ -55,9 +54,9 @@
 			
 			.timetable {
     			float:left;
-    			width:1320px;
+    			width:1220px;
     			margin-left:50px;
-    			margin-top:30px;
+    			margin-top:27px;
 			}
 
 			.day {
@@ -70,8 +69,9 @@
 			}
 			
 			.session  {
-				margin-top: 75px;
+				margin-top: 65px;
 				padding-left: 50px;
+    				width:1170px;
 				border-left: 1px solid white;
 			}
 			
@@ -165,14 +165,13 @@
         			</div>    	
 			    </div>	
     			<div class="timetable">
-    				<h1 class="day">Now:</h1>
-    				 				
+    				<h1 class="day">Now</h1>
     				<div class="session">
     					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
     					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
     					<h2 class="sessionInfo" id="d1"> Mark Foster and David Fenn from Devolver Digital </h2>  	
     				</div>
-    			</div>  					
+    			</div>  			
 			</div>
 		</div>
 	</body>
