--- a/templates/tomorrow.webvfx.html
+++ b/templates/tomorrow.webvfx.html
@@ -40,8 +40,7 @@
 			.links  {
 				display: block;
 				font-size: 2rem;
-				padding-top:30px;
-				font-family: Helvetica;
+				padding-top: 36px;
 			}
 			
 			.links .hashtag {
@@ -179,7 +178,7 @@
 			    </div>		
     			
     			<div class="timetable">
-    				<h1 class="day">Tomorrow:</h1>
+    				<h1 class="day">Tomorrow</h1>
     				
     				<div class="session one">
     					<h1 class="sessionTime" id="t1"> 00:00 </h1>
