--- a/templates/lower-left-thirds.webvfx.html
+++ b/templates/lower-left-thirds.webvfx.html
@@ -9,6 +9,7 @@
 				padding: 0;
 				height: 100%;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				font-size: 16px;
 				line-height: 1.1;
 				-webkit-font-smoothing: antialiased;
 				color:white;
@@ -41,12 +42,13 @@
 			
 			#now {
 				position: absolute;
-				top: -3.5rem;
+				top: -60px;
 				left: 0;
 				background-color: #360c4e;
 				padding: 1.5rem 2rem 0;
-				/*font-size: 2.75rem;*/
+				font-size: 22px;
 				color: #ff57c0;
+				font-family: "NB Grotesk";
 				line-height: 1;
 				text-transform: uppercase;
 			}
@@ -59,7 +61,7 @@
 			#sessionName {
 				margin: 0;
 				padding: 0 0 .5rem;
-				font-size: 4.25rem;
+				font-size: 68px;
 				font-weight: bold;
 				font-family: "NB Grotesk";
 				text-transform: uppercase;
@@ -69,7 +71,7 @@
 			#sessionInfo {		
 				margin: 0;
 				padding: 0;
-				font-size: 2.75rem;
+				font-size: 40px;
 				font-weight: normal;
 				line-height: 1.2;
 			}
@@ -127,9 +129,6 @@
 <body>
 	<div class="wrapper">		
 		<div id="slate">
-			<div id="now">
-    			<h1>Now:</h1>
-			</div>
 			<div class"info">
     			<h1 id="sessionName">Name of Session of Session</h1>
     			<h2 id="sessionInfo">Information about the session information about the session information about the session information about the session information about the session information about the session.</h2>
