--- a/templates/next.webvfx.html
+++ b/templates/next.webvfx.html
@@ -13,8 +13,8 @@
 
 			.wrapper {
 				position: relative;
-				width: 1920px;
-				height: 1080px;
+				width: 1820px;
+				height: 950px;
 			}
 
 			#slate {
@@ -39,7 +39,6 @@
 				display: block;
 				font-size: 2rem;
 				padding-top:75px;
-				font-family: Helvetica;
 			}
 			
 			.links .hashtag {
@@ -51,13 +50,13 @@
 			.links p {
 				line-height: 1.2;
 				margin: 0;
-			}		
+			}	
 			
 			.timetable {
     			float:left;
-    			width:1320px;
+    			width:1220px;
     			margin-left:50px;
-    			margin-top:30px;    			
+    			margin-top:27px;
 			}
 
 			.day {
@@ -70,9 +69,10 @@
 			}
 			
 			.session  {
-				margin-top: 75px;
+				margin-top: 65px;
 				padding-left: 50px;
 				border-left: 1px solid white;
+    				width:1170px;
 			}
 			
 			.sessionTime,
@@ -103,7 +103,6 @@
 				font-weight: normal;
 				line-height: 1.2;
 			}
-			
 		</style>
 		<script src="../lib/jquery-2.1.3.min.js"></script>
 		<script src="../lib/TweenMax.min.js"></script>
@@ -131,7 +130,7 @@
 				tl
 					.from( ".day", 0.5, { css: { marginLeft: "-=30", autoAlpha:0 },ease: Power4. easeInOut }, "day" )
 					.from( ".session", 0.7, { css: { marginLeft: "-=30", autoAlpha:0 }, ease: SlowMo. easeInOut  }, "one" )
-					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut },  "end")
+					.from( ".links", 0.5, { css: { autoAlpha:0 }, ease: Power4. easeInOut }, "end")
 			
 					//reverse
 					.to( ".day", 0.3, { css: { marginLeft: "-=30", autoAlpha:0  },ease: Power4. easeInOut }, "end+=6" )
@@ -166,8 +165,7 @@
         			</div>    	
 			    </div>	
     			<div class="timetable">
-    				<h1 class="day">Next:</h1>
-    				
+    				<h1 class="day">Next</h1>
     				<div class="session">
     					<h1 class="sessionTime" id="t1"> 00:00 - 00:00 </h1>
     					<h1 class="sessionName" id="s1"> The origins of AcidNerve and the design philosophy of Titan Souls </h1>
