fixed broken relative media links

--- a/templates/rezzed/join_us_for_egx.webvfx.html
+++ b/templates/rezzed/join_us_for_egx.webvfx.html
@@ -79,8 +79,8 @@
 			}
 			
 		</style>
-		<script src="../lib/jquery-2.1.3.min.js"></script>
-		<script src="../lib/TweenMax.min.js"></script>
+		<script src="../../lib/jquery-2.1.3.min.js"></script>
+		<script src="../../lib/TweenMax.min.js"></script>
 		<script type="text/javascript">
 			function Producer(tl) {
 				this.tl=tl;
@@ -123,7 +123,7 @@
 		<div class="wrapper">
     		<div class="slate">
         		<div class="goodbye">
-        			<img class="logo" id="rezzed" src="../images/rezzed-2015-white.png" />
+        			<img class="logo" id="rezzed" src="../../images/rezzed-2015-white.png" />
         			<div class="end-text">
             			<h1>And that's a wrap :'(</h1>
                     </div>
@@ -137,7 +137,7 @@
         			</div>
         		</div>
         		<div class="hello">
-    			    <img class="logo" id="egx" src="../images/egx-logo-white.png" />
+    			    <img class="logo" id="egx" src="../../images/egx-logo-white.png" />
         			<div class="egx">
             			<p>Join us in September for EGX at the NEC in Birmingham!</p> 	
             			<p>Get your tickets now!</p> 	
