--- a/templates/rezzed/lower-left-thirds.webvfx.html
+++ b/templates/rezzed/lower-left-thirds.webvfx.html
@@ -78,8 +78,8 @@
 		 
 		</style>
 			
-		<script src="../lib/jquery-2.1.3.min.js"></script>
-		<script src="../lib/TweenMax.min.js"></script>
+		<script src="../../lib/jquery-2.1.3.min.js"></script>
+		<script src="../../lib/TweenMax.min.js"></script>
 		<script type="text/javascript">
 			function Producer(tl) {
 				this.tl = tl;
