--- a/templates/rezzed/next.webvfx.html
+++ b/templates/rezzed/next.webvfx.html
@@ -104,8 +104,8 @@
 				line-height: 1.2;
 			}
 		</style>
-		<script src="../lib/jquery-2.1.3.min.js"></script>
-		<script src="../lib/TweenMax.min.js"></script>
+		<script src="../../lib/jquery-2.1.3.min.js"></script>
+		<script src="../../lib/TweenMax.min.js"></script>
 		<script type="text/javascript">
 			function Producer(tl) {
 				this.tl=tl;
@@ -156,7 +156,7 @@
 		<div class="wrapper">
 			<div id="slate">
     			<div class="about">
-        			<img class="logo" src="../images/rezzed-2015-white.png" />
+        			<img class="logo" src="../../images/rezzed-2015-white.png" />
         			<div class="links">
         				<p class="hashtag">#EGX <span style="color:white;">@EGX</span></p>
         				<p>egx.net/rezzed</p>
