--- a/templates/rezzed/technical_difficulties.webvfx.html
+++ b/templates/rezzed/technical_difficulties.webvfx.html
@@ -5,7 +5,7 @@
 				margin: 0;
 				padding: 0;
 				background-color: #360c4e;
-				background-image: url('../images/colussus.jpg');
+				background-image: url('../../images/colussus.jpg');
 				background-size: cover;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				-webkit-font-smoothing: antialiased;
@@ -34,8 +34,8 @@
 			}		
 
 		</style>
-		<script src="../lib/jquery-2.1.3.min.js"></script>
-		<script src="../lib/TweenMax.min.js"></script>
+		<script src="../../lib/jquery-2.1.3.min.js"></script>
+		<script src="../../lib/TweenMax.min.js"></script>
 		<script type="text/javascript">
 			function Producer(tl) {
 				this.tl=tl;
@@ -66,7 +66,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<img class="logo" src="../images/rezzed-2015-white.png" />
+			<img class="logo" src="../../images/rezzed-2015-white.png" />
 			<h1 class="sessionName">We're experiencing technical difficulties.</h1>
 			<h2 class="sessionInfo">Sorry, we'll be back soon!</h2>
 			<p class="hashtag">#EGX</p>
