--- a/templates/rezzed/tomorrow.webvfx.html
+++ b/templates/rezzed/tomorrow.webvfx.html
@@ -103,8 +103,8 @@
 				font-weight: normal;
 			}			
 		</style>
-		<script src="../lib/jquery-2.1.3.min.js"></script>
-		<script src="../lib/TweenMax.min.js"></script>
+		<script src="../../lib/jquery-2.1.3.min.js"></script>
+		<script src="../../lib/TweenMax.min.js"></script>
 		<script type="text/javascript">
 			function Producer(tl) {
 				this.tl=tl;
@@ -168,7 +168,7 @@
 		<div class="wrapper">
 			<div id="slate">
     			<div class="about">
-        			<img class="logo" src="../images/rezzed-2015-white.png" />
+        			<img class="logo" src="../../images/rezzed-2015-white.png" />
         			<div class="links">
         				<p class="hashtag">#EGX <span style="color:white;">@EGX</span></p>
         				<p>egx.net/rezzed</p>
