--- a/templates/egx/schedule.webvfx.html
+++ b/templates/egx/schedule.webvfx.html
@@ -87,13 +87,13 @@
 			}
 
 			#corner-overlay {
-				left: -1470px;
-				top: -1470px;
+				left: -1474px;
+				top: -1474px;
 			}
 
 			#corner-wipe {
-				left: -1470px;
-				top: -1470px;
+				left: -1474px;
+				top: -1474px;
 				z-index: 4;
 			}
 
@@ -229,7 +229,7 @@
 
 		<div id="corner-overlay" class="corner">
 			<div id="branding">
-				<img id="branding-logo" src="logo.png" onclick="doPause()"/>
+				<img id="branding-logo" src="logo.png" />
 				<div id="branding-text" class="blue">
 					<h2>facebook.com/egx</h2>
 					<h2>youtube.com/egx</h2>
