adding various templates, improving timings

--- a/templates/egx/next.webvfx.html
+++ b/templates/egx/next.webvfx.html
@@ -137,8 +137,8 @@
 				padding-left: 411px;
 				position: absolute;
 				left: 0;
-				right: 0;
 				bottom: 0;
+				width: 200%;
 				top: 66%;
 				font-size: 1.5em;
 			}
@@ -172,9 +172,9 @@
 
 				tl
 					.timeScale(1)
-					.add("pos0", 1)
-					.add("pos1", 1)
-					.add("pos2", 1);
+					.add("pos0", 0)
+					.add("pos1", 0)
+					.add("pos2", 0);
 
 				cutIn();
 				//fadeToOverlay();
@@ -187,8 +187,10 @@
 				tl
 					.to("#corner-wipe", .75, { css: { width: "4700px", height: "3172px", left: 0, top: 0 }, ease:Power0.easeIn }, "pos0" )
 					.from("#corner-overlay", .5, { css: { left : -1474, top : -1474 }, ease:Power1.easeOut }, "-=.5" )
-					.from(".box-large", 0.0000001, { css: { left : 3000 } } )
+					.from(".box-large", .0000001, { css: { left : 3000 } } )
+					.to("#box-text", .0000001, { css: { left: -1920 } } )
 					.to("#corner-wipe", .75, { css: { width: "0px", height: "0px", left: -1474, top: -1474 }, ease:Power0.easeIn } )
+					.to("#box-text", .5, { css: { left: 0 }, ease:Power0.easeIn }, "pos0+=.76" )
 
 			}
 
@@ -235,7 +237,7 @@
 					<h2>egx.net/egx</h2>
 					<h1 class="blue">#EGX @EGX</h1>
 				</div>
-				<div id="heading" class="green"><h1>UP NEXT</h1></div>
+				<div id="heading" class="green"><h1>UP NEXT...</h1></div>
 			</div>
 		</div>
 
