--- a/templates/egx/overlay-lower-left.webvfx.html
+++ b/templates/egx/overlay-lower-left.webvfx.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>EGX Overlay</title>
+		<title>EGX Lower Left Overlay</title>
 		<style type="text/css">
 
 			* { box-sizing: border-box; }
@@ -138,9 +138,9 @@
 					.add("start", 0)
 
 					// in
-					.to(arr1, 1.35, arr2, "start")
-					.from("#bottom-left", .25, { css: { "width" : "1920px", "height" : "1920px" }, ease:Power1.easeInOut }, "start+=.15" )
-					.from("#top-right", 0.15, { css: { "width" : "0", "height" : "0" }, ease:Power1.easeInOut }, "start+=.25" )
+					.to(arr1, 1.4, arr2, "start")
+					.from("#bottom-left", .25, { css: { "width" : "1920px", "height" : "1920px" }, ease:Power1.easeInOut }, "start+=.2" )
+					.from("#top-right", 0.15, { css: { "width" : "0", "height" : "0" }, ease:Power1.easeInOut }, "start+=.3" )
 					//.staggerFrom(".split-char", 0.5, { opacity: 0, ease:Power1.easeOut }, 0.015, "-=0.5" )
 					
 					// out
