--- a/templates/egx/schedule.webvfx.html
+++ b/templates/egx/schedule.webvfx.html
@@ -237,7 +237,7 @@
 					<h1 class="blue">#EGX @EGX</h1>
 				</div>
 				<div id="times" class="green"><h2>All times GMT+1</h2></div>
-				<div id="coming-up" class="green"><h1>COMING UP</h1></div>
+				<div id="coming-up" class="green"><h1>COMING UP...</h1></div>
 			</div>
 		</div>
 
