minor text changes

--- a/templates/egx/end-of-day.webvfx.html
+++ b/templates/egx/end-of-day.webvfx.html
@@ -192,11 +192,11 @@
 		<div id="corner-overlay" class="corner">
 			<div id="branding">
 				<img id="branding-logo" src="logo.png" onclick="doPause()"/>
-				<div id="branding-text" class="dark-blue">
+				<div id="branding-text" class="white">
 					<h2>facebook.com/egx</h2>
 					<h2>youtube.com/egx</h2>
 					<h2>egx.net/egx</h2>
-					<h1 class="dark-blue">#EGX @EGX</h1>
+					<h1 class="white">#EGX @EGX</h1>
 				</div>
 				<div id="heading" class="white"><h1></h1></div>
 			</div>
