minor styling changes

--- a/templates/egx/next.webvfx.html
+++ b/templates/egx/next.webvfx.html
@@ -128,7 +128,7 @@
 				top: 250px;
 				left: 100px;
 				width: 500px;
-				font-size: 2.4em;
+				font-size: 2em;
 				z-index: 1000;
 			}
 
@@ -237,7 +237,7 @@
 					<h2>egx.net/egx</h2>
 					<h1 class="blue">#EGX @EGX</h1>
 				</div>
-				<div id="heading" class="green"><h1>UP NEXT...</h1></div>
+				<div id="heading" class="green"><h1>UP NEXT</h1></div>
 			</div>
 		</div>
 
